@@ -1,3 +1,4 @@
+	* improve handling of filesystems not supporting fallocate()
 	* force-proxy no longer disables DHT
 	* improve connect-boost feature, to make new torrents quickly connect peers
 
